testsuite/tests/generics/GenCannotDoRep1_0.stderr

GenCannotDoRep1_0.hs:9:49: error:
    • Can't make a derived instance of ‘Generic1 Dynamic’:
        Constructor ‘Dynamic’ has existential type variables in its type
    • In the data declaration for ‘Dynamic’
    Suggested fix: Use a standalone deriving declaration instead
